--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,8 @@
 <h1>Welcome to the Community Clothing Outreach</h1>
-<p><%= link_to "Make an appointment", new_appointment_path %></p>
-<p><%= link_to "View upcoming appointments", appointments_path %></p>
-<p><%= link_to "Logout", logout_path %></p>
+<% if user_signed_in? %>
+  <p><%= link_to "Make an appointment", new_user_appointment_path(current_user) %></p>
+  <p><%= link_to "View upcoming appointments", user_appointments_path(current_user) %></p>
+  <p><%= link_to "Logout", logout_path %></p>
+<% else %>
+  <p><%= link_to "Login", new_user_session_path %></p>
+<% end %>
